<resources>
    <string name="app_name">ThingSMART</string>
    <string name="title_campus_security">Campus Security</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="tb1_open">Little Open</string>
    <string name="tb1_close">Little Close</string>
    <string name="tb2_open">Ring Open</string>
    <string name="tb2_close">Ring Close</string>
    <string name="tb3_open">Middle Open</string>
    <string name="tb3_close">Middle Close</string>
    <string name="tb4_open">Fore Open</string>
    <string name="tb4_close">Fore Close</string>
    <string name="tb5_open">Thumb Open</string>
    <string name="tb5_close">Thumb Close</string>
    <string name="tb6_open">All Open</string>
    <string name="tb6_close">All Close</string>
    <string name="tb7_left">Left Hand\n(switch)</string>
    <string name="tb7_right">Right Hand\n(switch)</string>
    <string name="activate_control">Activate Control</string>
</resources>
